--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,8 +6,8 @@
     <string name="current">Current</string>
     <string name="future_list">Future List</string>
     <string name="loading">Loading</string>
-    <string name="_25_0">25.0</string>
-    <string name="feels_like_20_4">Feels like 20.4</string>
+    <string name="_25_0">25.0 \u2103</string>
+    <string name="feels_like_20_4">Feels like 20.4 \u2103</string>
     <string name="patchy_rain_possible">Patchy rain possible</string>
     <string name="visibility_20_km">Visibility: 20 km</string>
     <string name="wind_se_5_3_m_s">Wind SE, 5.3 m/s</string>
